# math-phrase

./: .gitignore  CMakeLists.txt  README.md
inc/: analysis-failed.hpp  common.hpp  echo.hpp  exceptions.hpp  math-interpreter.hpp  operation.hpp
inc/per-phrase/: lexical.hpp  semantic.hpp  syntax.hpp
src/: main.cpp
src/meta/: type-list.cpp
src/per-operation/: interprete.cpp  per-operation.cpp
src/per-phrase/: echo.cpp  lexical.cpp  per-phrase.cpp  semantic.cpp  syntax.cpp
src/type-list/: meta.cpp
